--- a/Tables/images.html
+++ b/Tables/images.html
@@ -1,38 +1,76 @@
-<html>
-    <title>Images</title>
-    <body>
-        <table border="2px" align="center">
-            <tr>
-                <th colspan="5px" style="height: 30px;">KL.Rahul</th>
-            </tr>
-            <tr>
-                <th><img style="width: 150px; height:200px;" src="https://w0.peakpx.com/wallpaper/545/93/HD-wallpaper-kl-rahul-india-cricket-thumbnail.jpg"></th>
-<th></th>
-<th><img style="width: 150px; height:200px;" src="https://c.ndtvimg.com/2024-10/ofcb5448_cas_625x300_24_October_24.jpg?im=FeatureCrop,algorithm=dnn,width=806,height=605"></th>
-<th></th> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>KL Rahul Gallery</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to right, #e3f2fd, #ffffff);
+            text-align: center;
+        }
 
-<th><img style="width: 150px; height:200px;"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSazq6TJjJSqr3OAqg0AjR1qXIGmcL7BLfvcw&s"></th>          
-</tr>
+        h1 {
+            color: #0d47a1;
+            margin-top: 20px;
+        }
 
-            <tr>
-                <td>
+        table {
+            margin: 30px auto;
+            border-collapse: separate;
+            border-spacing: 20px;
+        }
 
-                </td>
-                <td><img style="width: 150px; height:200px;" src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_w_1200,q_50/lsci/db/PICTURES/CMS/387000/387057.jpg"></td>
-            <td></td>
-            <td><img style="width:150px;height:200px" src="https://i.pinimg.com/originals/85/84/2a/85842a90f2a616af014cd40821aca4dc.jpg"></td>
-        <td></td>    
-        </tr>
+        img {
+            width: 180px;
+            height: 230px;
+            object-fit: cover;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            transition: transform 0.3s ease;
+        }
 
-            <tr>
-                <td><img style="width: 150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZliNj4fIzpKeyl69MOiL55rod9a0a2Ejhw&s"></td>
-            <td></td>
-            
-            
-            <td><img style="width:150px; height:200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp01qe68m0uFB_7vEZVDAjRDoi9oe4aHz3Ew&s"></td>
+        img:hover {
+            transform: scale(1.08);
+        }
+
+        .title-cell {
+            font-size: 26px;
+            font-weight: bold;
+            color: white;
+            background: #1565c0;
+            padding: 12px;
+            border-radius: 10px;
+        }
+    </style>
+</head>
+
+<body>
+
+<h1>KL Rahul Image Gallery</h1>
+
+<table>
+    <tr>
+        <th colspan="5" class="title-cell">KL Rahul</th>
+    </tr>
+
+    <tr>
+        <td><img src="https://w0.peakpx.com/wallpaper/545/93/HD-wallpaper-kl-rahul-india-cricket-thumbnail.jpg"></td>
+        <td><img src="https://c.ndtvimg.com/2024-10/ofcb5448_cas_625x300_24_October_24.jpg?im=FeatureCrop,algorithm=dnn,width=806,height=605"></td>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSazq6TJjJSqr3OAqg0AjR1qXIGmcL7BLfvcw&s"></td>
+        <td><img src="https://img1.hscicdn.com/image/upload/f_auto,t_ds_w_1200,q_50/lsci/db/PICTURES/CMS/387000/387057.jpg"></td>
+        <td><img src="https://i.pinimg.com/originals/85/84/2a/85842a90f2a616af014cd40821aca4dc.jpg"></td>
+    </tr>
+
+    <tr>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVZliNj4fIzpKeyl69MOiL55rod9a0a2Ejhw&s"></td>
+        <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTp01qe68m0uFB_7vEZVDAjRDoi9oe4aHz3Ew&s"></td>
+        <td><img src="https://wallpapercave.com/wp/wp8127082.jpg"></td>
         <td></td>
-            <td><img style="width:150px;height:200px;" src="https://wallpapercave.com/wp/wp8127082.jpg"></td>    
-        </tr>
-        </table>
-    </body>
+        <td></td>
+    </tr>
+
+</table>
+
+</body>
 </html>
